# bhex

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  alloc.c  alloc.h  completion.c  completion.h  defs.h  dlist.c  dlist.h  filebuffer.c  filebuffer.h  gen_compile_commands.sh  gen_coverage_report.sh  ll.c  ll.h  log.c  log.h  main.c  parser.c  parser.h  tui.c  tui.h
.github/workflows/: cmake-multi-platform.yml  cmake-release.yml  cmake-tests.yml
bhengine/: .gitignore  Makefile  README.txt  ast.c  ast.h  builtin.c  builtin.h  formatter.c  formatter.h  formatter_term.c  formatter_term.h  formatter_xml.c  formatter_xml.h  interpreter.c  interpreter.h  lexer.c  lexer.l  parser.c  parser.h  parser.y  scope.c  scope.h  value.c  value.h  vm.c  vm.h
cmd/: cmd.c  cmd.h  cmd_arg_handler.c  cmd_arg_handler.h  cmd_assemble.c  cmd_assemble.h  cmd_checksum.c  cmd_checksum.h  cmd_commit.c  cmd_commit.h  cmd_crc.c  cmd_crc.h  cmd_delete.c  cmd_delete.h  cmd_diff.c  cmd_diff.h  cmd_disas.c  cmd_disas.h  cmd_echo.c  cmd_echo.h  cmd_entropy.c  cmd_entropy.h  cmd_export.c  cmd_export.h  cmd_findbase.c  cmd_findbase.h  cmd_hash.c  cmd_hash.h  cmd_import.c  cmd_import.h  cmd_info.c  cmd_info.h  cmd_interactive.c  cmd_interactive.h  cmd_isa_identify.c  cmd_isa_identify.h  cmd_legacy_template.c  cmd_legacy_template.h  cmd_print.c  cmd_print.h  (+16 more)
cmd/hash/: md5.c  md5.h
cmd/templates/: README.txt  gen_template.py  template.c  template.h  template_archives.h  template_elf32.h  template_elf64.h  template_mach.h  template_pe.h
cmd/util/: byte_to_num.c  byte_to_num.h  byte_to_str.c  byte_to_str.h  endian.c  endian.h  print.h  str.c  str.h
common/: alloc.c  alloc.h  checksums.c  checksums.h  cmdline_parser.c  cmdline_parser.h  crc.c  crc.h  defs.h  display.c  display.h  dlist.c  dlist.h  expr_eval.c  expr_eval.h  filebuffer.c  filebuffer.h  isadetect.c  isadetect.h  ll.c  ll.h  log.c  log.h  map.c  map.h  strbuilder.c  strbuilder.h  terminal.c  terminal.h
common/hash/: blake2-impl.h  blake2.h  blake2b-ref.c  blake2s-ref.c  blake3.c  blake3.h  blake3_impl.c  blake3_impl.h  brg-types.h  ghost.c  ghost.h  gost.c  gost.h  groestl-ref.c  groestl-ref.h  jh-ref.h  md2.c  md2.h  md4.c  md4.h  md5.c  md5.h  md6.c  md6.h  ripemd.c  ripemd.h  ripemd128.c  ripemd128.h  ripemd160.c  ripemd160.h  sha-private.h  sha.h  sha1.c  sha224-256.c  sha3.c  sha3.h  sha384-512.c  shash.c  shash.h  sm3.c  (+5 more)
common/ml/: binexec.c  binexec.h  isadetect.c  isadetect.h  isadetect_features.c  model_locator.c  model_locator.h  rf_model.c  rf_model.h
common/util/: byte_to_num.c  byte_to_num.h  byte_to_str.c  byte_to_str.h  byteorder.h  endian.c  endian.h  math.c  math.h  print.c  print.h  str.c  str.h
linenoise/: linenoise.c  linenoise.h
python/: bhengine.py  tengine.py
scripts/: format.sh  gen_compile_commands.sh  gen_coverage_report.sh  install.sh  run_tests.sh
templates/: elf.bhe  elf_2.bhe  gzip.bhe  jpeg.bhe  lzo.bhe  macho.bhe  net.bhe  pe.bhe  png.bhe  rpm.bhe  squashfs.bhe  tar.bhe  zip.bhe
tengine/: .gitignore  Makefile  README.md  README.txt  ast.c  ast.h  builtin.c  builtin.h  dlist.c  dlist.h  formatter.c  formatter.h  formatter_term.c  formatter_term.h  formatter_xml.c  interpreter.c  interpreter.h  lexer.c  lexer.l  local.h  main.c  map.c  map.h  parser.c  parser.h  parser.y  scope.c  scope.h  tengine.c  tengine.h  value.c  value.h  vm.c  vm.h
tengine/samples/: elf64.bhe  mach.bhe  sample.bhe
tests/: dummy_filebuffer.c  dummy_filebuffer.h  elf_not_kitty.h  elf_truncated.h  fuzz_test_tengine.c  gen_tests.py  t.h  t_cmd_common.h  test.h  test_bench_bhengine.c  test_bhengine_interpreter.c  test_bhengine_vm.c  test_checksum.c  test_cmd_assemble.c  test_cmd_checksum.c  test_cmd_commit.c  test_cmd_crc.c  test_cmd_delete.c  test_cmd_diff.c  test_cmd_disas.c  test_cmd_echo.c  test_cmd_entropy.c  test_cmd_export.c  test_cmd_findbase.c  test_cmd_hash.c  test_cmd_import.c  test_cmd_info.c  test_cmd_isa_identify.c  test_cmd_print.c  test_cmd_search.c  test_cmd_seek.c  test_cmd_setbase.c  test_cmd_strings.c  test_cmd_templates.c  test_cmd_undo.c  test_cmd_write.c  test_crc.c  test_expr_eval.c  test_filebuffer.c  test_filebuffer.h  (+6 more)
tests/data/: asm_snippets.h  big_buffers.h  elf_not_kitty.h  elf_truncated.h  net.h  pe_tiny.h  sample_fat_macho.h  sample_gzip.h  sample_jpeg.h  sample_lzo.h  sample_macho.h  sample_png.h  sample_rpm.h  sample_squashfs.h  sample_zip.h  wide_strings.h
tests/data/identify/: README.md  gen_identify_testcases.sh  generate.py  generate_asm_snippets.py  identify_sample.c
tests/data/identify/docker/: Dockerfile
vscode/: LICENSE  Makefile  extension.js  language-configuration.json  package-lock.json  package.json
vscode/syntaxes/: bhe.tmLanguage.json
